# finance_rust_crossterm_tui

./: .gitignore  Cargo.toml  README.md
src/: main.rs
